[svn-inject] Installing original source of gfxboot

--- a/themes/SuSE/help-install.cs.html
+++ b/themes/SuSE/help-install.cs.html
@@ -1,8 +1,10 @@
 <html><body>
 
+<!-- help=install -->
+
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <h3><a name="main">Nápověda zavaděče</a></h3>
-Vítejte v <em>SUSE LINUXu 9.2</em><br><br>
+Vítejte v <em>SUSE LINUXu 9.3</em><br><br>
 
 K výběru požadované funkce použijte tuto nabídku. Pokud máte problém s pohybem po systému nápovědy, stiskněte klávesu <em>F1</em>. Tak vstoupíte do <a href="#help">popisu</a> systému nápovědy. Hlavní funkce této nabídky jsou:<br><br>
 
@@ -15,25 +17,21 @@ Tato volba je vhodná pro naprostou většinu počítačů. Pokud při instalaci
 
 <a href="#failsafe">Instalace -- bezpečné nastavení</a>: Pokud volba <em>Instalace</em> vedla k zatuhnutí systému nebo chybám, použijte tuto nabídku.<br><br>
 
-<a href="#manual">Ruční instalace</a>: Tato volba je určena pouze pro experty. S její pomocí získáte maximální kontrolu nad systémem a také možnost zavést některé moduly před spuštěním záchranného systému.<br><br>
-
 <a href="#rescue">Záchranný systém</a>: Spuštění malého linuxového systému přímo z  RAM. Použijte ho v případě vážných problémů s nainstalovaným systémem. Po spuštění se přihlaste jako uživatel root. <br><br>
 
 <a href="#memtest">Test paměti</a>: Test paměti je užitečný při zjišťování stavu paměťových modulů. Jde o zátěžový test. <br><br>
 
-<a href="#opt">Parametry startu</a>: Startovací parametry mohou ovlivnit chování systému.<br><br>
+<a href="#main">Parametry startu</a>: Startovací parametry mohou ovlivnit chování systému.<br><br>
 
 <a href="#help">F1 Nápověda</a>: Nápověda zavaděče je citlivá na obsah. Poskytuje informace o zvolené nabídce nebo pokud editujete parametry jádra, snaží se poskytnout informace o dané volbě. Obsahuje také popis samotného systému nápovědy.<br><br>
 
 <a href="#videomode">F2 Video režim</a>: Zde můžete nastavit různá rozlišení. V případě problémů zvolte <em>textový režim</em>.<br><br>
 
-<a href="#keytable">F3 Jazyk</a>: Nastavení jazyka a rozložení kláves během používání zavaděče.<br><br>
+<a href="#install_src">F3 Instalační zdroj</a>: Zvolte instalační zdroj.<br><br>
 
-<a href="#install_src">F4 Instalační zdroj</a>: Volba instalačního zdroje.<br><br>
+<a href="#keytable">F4 Jazyk</a>: Nastavení jazyka a rozložení kláves během používání zavaděče.<br><br>
 
-<a href="#startup">F5 Spouštění jádra</a>: Normálně jsou hlášení jádra zakryta. Stisknutím klávesy <em>F5</em> to můžete změnit.<br><br>
-
-<a href="#driverupdate">F6 Update ovladače</a>: U některých velmi nových systémů může být při instalaci potřeba updatovat ovladače.<br><br>
+<a href="#driverupdate">F5 Update ovladače</a>: U některých velmi nových systémů může být při instalaci potřeba updatovat ovladače.<br><br>
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <h3><a name="help">Používání systému nápovědy</a></h3>
@@ -52,16 +50,16 @@ Navigační klávesy<br><br>
   <em>End</em>: přechod na konec stránky<br>
   <em>Esc</em>: ukončení nápovědy<br>
 
-<br>Návrat do <a href="#opt">startovací nabídky</a>
+<br>Návrat do <a href="#main">startovací nabídky</a>
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <h3><a name="driverupdate">Update ovladače</a></h3>
 
-V případě potřeby zavedení ovladače z diskety nebo CD stiskněte <em>F6</em>. Zavaděč vás po zavedené jádra požádá o médium s ovladačem.<br><br>
+V případě potřeby zavedení ovladače z diskety nebo CD stiskněte <em>F5</em>. Zavaděč vás po zavedené jádra požádá o médium s ovladačem.<br><br>
 
 Update ovladače je obvykle novější verzi ovladače potřebná pro průběh instalace.
 
-<br>Návrat do <a href="#opt">startovací nabídky</a>
+<br>Návrat do <a href="#main">startovací nabídky</a>
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
@@ -73,29 +71,14 @@ Může se stát, že váš monitor nelze automaticky detekovat. V takovém pří
 
 Pokud máte během instalace problémy s grafickou kartou, zvolte <em>textový režim</em>.
 
-<br>Návrat do <a href="#opt">startovací nabídky</a>
-
-
-<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<h3><a name="startup">Výběr režimu splashe</a></h3>
-
-
-Splash režim můžete měnit pomocí klávesy <em>F5</em>. Použít můžete také parametr jádra <a href="#o_splash">splash</a>.<br>
-<br>
-<em>native</em> vypne splash screen (stejně jako splash=0)<br>
-<br>
-<em>silent</em> zakryje všechna hlášení jádra a zobrazí místo toho animaci znázorňující pokrok při stratu nebo ukončení systému<br>
-<br>
-<em>verbose</em> Zobrazí hlášení jádra na grafickém pozadí<br>
-
-<br>Návrat do <a href="#opt">startovací nabídky</a>
+<br>Návrat do <a href="#main">startovací nabídky</a>
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <h3><a name="keytable">Jazyk a výběr klávesové mapy</a></h3>
 
 Stisknutím <em>F4</em> můžete změnit jazyk a rozložení klávesové mapy. 
-<br>Návrat do <a href="#opt">startovací nabídky</a>
+<br>Návrat do <a href="#main">startovací nabídky</a>
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
@@ -105,16 +88,16 @@ Stisknutím <em>F3</em> můžete zvolit instalační zdroj.<br><br>
 
 Tato volba má stejný význam jako parametr <a href="#o_install">install</a>.
 
-<br>Návrat do <a href="#opt">startovací nabídky</a>
+<br>Návrat do <a href="#main">startovací nabídky</a>
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <h3><a name="linux">Instalace</a></h3>
 
 Výběrem <em>Instalace</em> spustíte výchozí nastavení instalace. Při startu můžete vybírat z dalších
-<a href="#opt">startovacích nabídek</a>. Výchozí volbou aktivujete řadu funkcí běžně dostupného hardwaru. <br><br>
+<a href="#main">startovacích nabídek</a>. Výchozí volbou aktivujete řadu funkcí běžně dostupného hardwaru. <br><br>
 
-<br>Návrat do <a href="#opt">startovací nabídky</a>
+<br>Návrat do <a href="#main">startovací nabídky</a>
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
@@ -125,7 +108,7 @@ ID zařízení prvního disku je předáváno systému BIOSem počítače. <br><
 
 Použijte tuto volbu v případě, že zapomenete instalační CD nebo DVD v mechanice a chcete spustit nainstalovaný systém.<br><br>
 
-<br>Návrat do <a href="#opt">startovací nabídky</a>
+<br>Návrat do <a href="#main">startovací nabídky</a>
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
@@ -140,7 +123,7 @@ Pokud se při startu jádra objeví problémy, zvolte <em>Instalace -- bez ACPI<
    * PCI karty nejsou správně detekovány nebo inicializovány<br><br>
 
 
-<br>Návrat do <a href="#opt">startovací nabídky</a>
+<br>Návrat do <a href="#main">startovací nabídky</a>
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
@@ -149,15 +132,7 @@ Pokud se při startu jádra objeví problémy, zvolte <em>Instalace -- bez ACPI<
 Pokud se při instalaci setkáte s problémy nebo zatuhnutím, zvolte <em>Instalace -- bezpečné nastavení</em>. Touto volbou zakážete DMA pro všechna IDE zařízení a používání všech typů správy napájení pro celý systém. Více informací získáte v nápovědě parametrů jádra <a href="#o_apm">apm</a>,
 <a href="#o_acpi">acpi</a> a <a href="#o_ide">ide</a>.
 
-<br>Návrat do <a href="#opt">startovací nabídky</a>
-
-
-<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<h3><a name="manual">Ruční instalace</a></h3>
-
-<em>Ruční instalace</em> umožňuje pokročilejším uživatelům nastavit řadu parametrů ještě před samotnou instalací nebo spuštěním <a href="#rescue">Záchranný systém</a>. Tato volba je určena pouze pro pokročilejší uživatele.
-
-<br>Návrat do <a href="#opt">startovací nabídky</a>
+<br>Návrat do <a href="#main">startovací nabídky</a>
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
@@ -165,7 +140,7 @@ Pokud se při instalaci setkáte s problémy nebo zatuhnutím, zvolte <em>Instal
 
 <em>Záchranný systém</em> je malý systém uložený přímo v RAM. Z tohoto systému je možné provádět změny na systému již nainstalovaném. V tomto systému jsou dostupné pouze textové nástroje a je určen pouze pro pokročilejší uživatele.<br><br>
 
-<br>Návrat do <a href="#opt">startovací nabídky</a>
+<br>Návrat do <a href="#main">startovací nabídky</a>
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
@@ -175,7 +150,7 @@ S nabídkou <em>Test paměti</em> získáváte vynikající nástroj na test pam
 
 Bezproblémový průběh testu nezaručuji stoprocentní nezávadnost paměti. Měl by však najít naprostou většinu vad.<br>
 
-<br>Návrat do <a href="#opt">startovací nabídky</a>
+<br>Návrat do <a href="#main">startovací nabídky</a>
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
@@ -196,7 +171,7 @@ b) parametry jádra<br>
   <a href="#o_ide">ide</a> -- ovládání IDE subsystému<br>
 
 
-<br>Návrat do <a href="#opt">startovací nabídky</a>
+<br>Návrat do <a href="#main">startovací nabídky</a>
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <h3><a name="o_install">Parametry instalátoru: install</a></h3>
@@ -301,11 +276,11 @@ V případě výskytu problémů s IDE systémem můžete použít parametr: <br
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<h3><a name="bits">Software Type Selection</a></h3>
+<h3><a name="bits">Volba architektury</a></h3>
 
-You have the choice to install the 32-bit or 64-bit version of SUSE LINUX.
+Můžete si zvolit mezi 32 nebo 64 bitovou verzí SUSE LINUXu.
 
-<br><br>Return to <a href="#main">Start Page</a>
+<br><br>Návrat na <a href="#main">Parametry startu</a>
 
 
 </body></html>
