--- a/themes/SuSE/help-install.hu.html
+++ b/themes/SuSE/help-install.hu.html
@@ -5,9 +5,9 @@
 <!-- help=install -->
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<h3><a name="main">Rendszertöltő súgó</a></h3> Üdvözli a <em>&product;</em><BR><BR> Válassza ki a kívánt funkciót ebből a menüből. Ha gondot okoz a súgórendszerben mozgás, az <em>F1</em> megnyomásával hívja elő a súgórendszer <a href="#help">leírását.</a>  A menü legfontosabb funkciói:<BR><BR>
+<h3><a name="main">Rendszertöltő súgó</a></h3> Üdvözli a <em>&product;</em><BR><BR> Kérem válassza ki a kívánt funkciót a menüből. Ha gondot okoz a súgórendszerben való navigáció, az <em>F1</em> megnyomásával elolvashatja a súgórendszer <a href="#help">leírását</a>.  A menü legfontosabb funkciói:<BR><BR>
 
-<a href="#harddisk">Rendszerindítás merevlemezről</a>: Ez a lehetőség semmit nem módosít a rendszeren. Mindössze elindítja a már korábban telepített operációs rendszert.<BR><BR>
+<a href="#harddisk">Rendszerindítás merevlemezről</a>: Elindítja a már korábban telepített rendszert a merevlemezről. Ebben az esetben semmilyen módosítás nem történik a rendszeren.<BR><BR>
 
 <a href="#linux">Telepítés</a>: Ez a telepítési mód a legtöbb gépen működik. Ha rendszerindítás közben lefagyást észlel, vagy problémák jelentkeznek a hardverkomponensek (például lemezvezérlők vagy hálózati kárták) felismerése során, akkor próbálkozzon meg az alábbi telepítési lehetőségekkel. <BR><BR>
 
@@ -17,19 +17,19 @@
 
 <a href="#rescue">Mentőrendszer</a>: Ez a rendszerkép egy kisméretű rendszert indít el RAM-ból. Akkor hasznos, ha a rendszer nem megfelelően indul. A rendszer betöltése után jelentkezzen be root felhasználóként. <BR><BR>
 
-<a href="#memtest">Memóriateszt</a>: A memóriatesztelés nemcsak az újonnan behelyezett memóriamodulok ellenőrzésére jó. Ez a nyúzóteszt a rendszer nagy részét leterheli és alkalmas lehet hardverproblémák kimutatására. <BR><BR>
+<a href="#memtest">Memóriateszt</a>: A memóriatesztelés nemcsak az újonnan behelyezett memóriamodulok ellenőrzésére jó, hanem a rendszer nagy részét leterheli és alkalmas lehet hardverproblémák kimutatására. <BR><BR>
 
 <a href="#opt">Rendszerindítási paraméterek</a>: A rendszerindítási paraméterek teljesen megváltoztathatják a rendszer viselkedését. Ezek a kernel beállításai.<BR><BR>
 
-<a href="#help">F1 Segítség</a>: Környezetérzékeny súgó. A rendszerindítási képernyő aktív elemétől függően más és más képernyőket jelenít meg. Magáról a súgórendszerről is található leírás.<BR><BR>
+<a href="#help">F1 Segítség</a>: Környezetérzékeny súgó. A rendszerindítási képernyő aktív elemétől függően más és más képernyőket jelenít meg és magáról a súgórendszerről is található leírás.<BR><BR>
 
-<a href="#videomode">F2 Videomód</a>: Itt választhatja ki a telepítés során használt képernyőfelbontást. Ha probléma van a grafikus telepítéssel, lehet, hogy a <em>szöveges mód</em> kerülő megoldást biztosít.<BR><BR>
+<a href="#videomode">F2 Videomód</a>: Itt választhatja ki a telepítés során használt képernyőfelbontást. Ha probléma van a grafikus telepítéssel, kérem próbálja meg a <em>szöveges mód</em>ot.<BR><BR>
 
 <a href="#install_src">F3 Telepítés forrása</a>: Válassza ki a telepítés forrását.<BR><BR>
 
 <a href="#keytable">F4 Nyelv</a>: Adja meg a rendszertöltő által használt nyelvi és billentyűzetbeállításokat.<BR><BR>
 
-<a href="#driverupdate">F5 Meghajtóprogram-frissítés</a>: Nagyon új gépek esetében szükséglehet egy meghajtóprogram frissítésére a rendszer telepítéséhez.<BR><BR>
+<a href="#driverupdate">F5 Meghajtóprogram-frissítés</a>: Nagyon új gépek esetében szükséglehet valamely meghajtóprogram frissítésére a rendszer telepítéséhez.<BR><BR>
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <h3><a name="help">A súgórendszer használata</a></h3> A rendszertöltő online súgója környezetérzékeny. Információt nyújt a kiválasztott menüelemről, vagy ha a rendszerindítási paramétereket módosítja, akkor megpróbál információt adni arról a paraméterről, amelyen a kurzor éppen áll.<BR>
@@ -52,7 +52,7 @@
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<h3><a name="videomode">Videomód kiválasztása</a></h3> Nyomja meg az <em>F2</em> gombot a grafikus kártya által támogatott videomódok listájának lekéréséhez. A monitor által támogatott legnagyobb felbontás alapértelmezésként ki van választva.<BR><BR> Előfordulhat, hogy nem sikerül a monitor automatikus felismerése. Ebben az esetben válassza ki kézzel a preferált módot.<BR><BR> Ha gondok vannak a grafikus kártyával a telepítés során, a <em>szöveges mód</em> nyújthat kerülő megoldást. <BR><BR>Visszatérés a <a href="#main">Kezdőoldalra</a>
+<h3><a name="videomode">Videomód kiválasztása</a></h3> Nyomja meg az <em>F2</em> gombot a grafikus kártya által támogatott videomódok listájának lekéréséhez. A monitor által támogatott legnagyobb felbontás alapértelmezésként kerül kiválasztásra.<BR><BR> Előfordulhat, hogy a monitor automatikus felismerése sikertelen, ebben az esetben válassza ki a használni kívánt felbontást.<BR><BR> Ha gondok vannak a grafikus kártyával a telepítés során, a <em>szöveges mód</em> nyújthat kerülő megoldást. <BR><BR>Visszatérés a <a href="#main">Kezdőoldalra</a>
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
@@ -64,36 +64,36 @@
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<h3><a name="linux">Telepítés</a></h3> A <em>Telepítés</em> lehetőség kiválasztásával indul az alapértelmezett telepítés. A beírt <a href="#opt">rendszerindítási paraméterek</a> alkalmazásra kerülnek. Ez a lehetőség a szokásosan elérhető hardvereszközök számos funkcióját aktiválja. <BR><BR><BR><BR>
+<h3><a name="linux">Telepítés</a></h3> A <em>Telepítés</em> lehetőség kiválasztásával indul az alapértelmezett telepítés. A megadott <a href="#opt">rendszerindítási paraméterek</a> alkalmazásra kerülnek. Ez a lehetőség a szokásosan elérhető hardvereszközök számos funkcióját aktiválja. <BR><BR><BR><BR>
 
 <BR><BR>Visszatérés a <a href="#main">Kezdőoldalra</a>
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<h3><a name="harddisk">Indítás merevlemezről</a></h3> A <em>Telepített OS indítása</em> lehetőséggel indítható el a helyi merevlemezen telepített rendszer. A rendszert helyesen kell telepíteni, mert csak az első merevlemez mester rendszerindító rekordja (MBR) kerül indításra. Az első merevlemez eszközazonosítóját a számítógép BIOS-a biztosítja. <BR><BR> Ez akkor hasznos, ha bentfelejtett a CD-t vagy DVD-t a meghajtóban, és feltétlenül a merevlemezről kívánja elindítani a rendszert.<BR><BR><BR><BR>
+<h3><a name="harddisk">Rendszerindítás merevlemezről</a></h3> A <em>Rendszerindítás merevlemezről</em> lehetőséggel indítható el a helyi merevlemezen telepített rendszer. A rendszert helyesen kell telepíteni, mert csak az első merevlemez mester rendszerindító rekordja (MBR) kerül indításra. Az első merevlemez eszközazonosítóját a számítógép BIOS-a biztosítja. <BR><BR> Ez akkor hasznos, ha bentfelejtett a CD-t vagy DVD-t a meghajtóban, és feltétlenül a merevlemezről kívánja elindítani a rendszert.<BR><BR><BR><BR>
 
 <BR><BR>Visszatérés a <a href="#main">Kezdőoldalra</a>
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<h3><a name="noacpi">Telepítés -- ACPI letiltva</a></h3> A SUSE Linuxban a 2.6-os kernel ACPI támogatása elérhető a stabil 2.4-es kernelhez is. A nagyon friss hardvereszközök néha igénylik az ACPI meglétét a megszakítások kezeléséhez. Az ACPI teljesen felváltja a régi APM rendszert.. <BR><BR> Ha problémákba ütközik a kernel indítása során, válassza a <em>Telepítés -- ACPI letiltva</em> lehetőséget. Ismert problémák hibás ACPI-vel rendelkező gépek esetén: <BR><BR> * a kernel lefagy rendszerindítás közben<BR> * a PCI kártyák nem kerülnek felismerésre, vagy nem sikerül tökéletesen inicializálni őket.<BR><BR><BR><BR>
+<h3><a name="noacpi">Telepítés - ACPI támogatás nélkül</a></h3> A SUSE Linuxban a 2.6-os kernel ACPI támogatása elérhető a stabil 2.4-es kernelhez is. A nagyon friss hardvereszközök néha igénylik az ACPI meglétét a megszakítások kezeléséhez. Az ACPI teljesen felváltja a régi APM rendszert.. <BR><BR> Ha problémákba ütközik a kernel indítása során, válassza a <em>Telepítés - ACPI támogatás nélkül</em> lehetőséget. Ismert problémák hibás ACPI-vel rendelkező gépek esetén: <BR><BR> * a kernel lefagy rendszerindítás közben<BR> * a PCI kártyák nem kerülnek felismerésre, vagy nem sikerül tökéletesen inicializálni őket.<BR><BR><BR><BR>
 
 
 <BR><BR>Visszatérés a <a href="#main">Kezdőoldalra</a>
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<h3><a name="failsafe">Telepítés -- Biztonságos beállítások</a></h3> Ha telepítés közben lefagyásokat vagy nem megismételhető hibákat észlel, válassza a <em>Telepítés -- Biztonságos beállítások</em> lehetőséget. Ez a beállítás letiltja az IDE-meghajtók DMA-támogatását és az összes tápellátás-felügyeleti funkciót. Tekintse meg továbbá az <a href="#o_apm">apm</a>, az <a href="#o_acpi">acpi</a> és az <a href="#o_ide">ide</a> paramétereket is. <BR><BR>Visszatérés a <a href="#main">Kezdőoldalra</a>
+<h3><a name="failsafe">Telepítés - Biztonságos beállításokkal</a></h3> Ha telepítés közben lefagyásokat vagy nem megismételhető hibákat észlel, válassza a <em>Telepítés - Biztonságos beállításokkal</em> lehetőséget. Ez a beállítás letiltja az IDE-meghajtók DMA-támogatását és az összes tápellátás-felügyeleti funkciót. Tekintse meg továbbá az <a href="#o_apm">apm</a>, az <a href="#o_acpi">acpi</a> és az <a href="#o_ide">ide</a> paramétereket is. <BR><BR>Visszatérés a <a href="#main">Kezdőoldalra</a>
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<h3><a name="rescue">Rendszer-helyreállítás</a></h3> A <em>Rendszer-helyreállítás</em> egy kisméretű, RAM-lemez alapú rendszer. Innen lehetséges egy már telepített rendszer mindenféle módosításainak elvégzése. Mivel ebben a rendszerben csak alacsonyszintű eszközök érhetők el, használatát csak szakembereknek javasoljuk<BR><BR><BR><BR>
+<h3><a name="rescue">Mentőrendszer</a></h3> A <em>Mentőrendszer</em> egy kisméretű, RAM-lemez alapú rendszer, így lehetséges egy már telepített rendszer módosítása. Mivel ebben a rendszerben csak alacsonyszintű eszközök érhetők el, használatát kizárólag szakembereknek javasoljuk<BR><BR><BR><BR>
 
 <BR><BR>Visszatérés a <a href="#main">Kezdőoldalra</a>
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<h3><a name="memtest">Memóriateszt</a></h3> A mellékelt <em>Memóriateszt</em> remek lehetőséget nyújt egy rendszer hardvereszközeinek nyúzótesztelésére. Elsődleges célja természetesen a hibás RAM-modulok azonosítása, de a rendszer egyéb részeit is terheli. <BR> Az, hogy a rendszer nem talál hibát, még nem garancia a memória tökéletességére, bár a legtöbb hiba előjön a vizsgálat során.<BR><BR>
+<h3><a name="memtest">Memóriateszt</a></h3> A mellékelt <em>Memóriateszt</em> remek lehetőséget nyújt egy rendszer hardvereszközeinek tesztelésére. Elsődleges célja természetesen a hibás RAM-modulok azonosítása, de a rendszer egyéb részeit is terheli. <BR>Az, hogy a rendszer nem talál hibát, még nem garancia a memória tökéletességére, bár a legtöbb hiba előjön a vizsgálat során.<BR><BR>
 
 <BR><BR>Visszatérés a <a href="#main">Kezdőoldalra</a>
 
@@ -168,7 +168,7 @@
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <h3><a name="bits">Szoftvertípus kiválasztása</a></h3>
 
-Telepítheti a SUSE LINUX akár 32, akár 64 bites változatát.
+Telepítheti a SUSE Linux akár 32, akár 64 bites változatát.
 
 <br><br>Visszatérés a <a href="#main">Kezdőoldalra</a>
 
